--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,59 @@
 .App {
-  text-align: center;
+  width: 98vw;
+  border: 2px solid green;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.result {
+  background-color: grey;
+  width: 100%;
+  height: 100px;
+  justify-content: flex-end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.result p {
+  font-size: 40px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-cont {
+  width: 50vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.btn-container {
+  width: 100%;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  border: 1px solid gainsboro;
+  outline: none;
+  padding: 12px;
+  background-color: rgb(241, 237, 237);
+  width: 25%;
+  height: 100px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.a-center {
+  align-items: center;
+}
+
+.j-center {
+  justify-content: flex-end;
+}
+
+.zero {
+  width: 50%;
+}
+
+.first-row button:last-of-type,
+.second-row button:last-of-type,
+.third-row button:last-of-type,
+.fourth-row button:last-of-type,
+.fifth-row button:last-of-type {
+  background-color: darkorange;
 }
