Finished full-website

--- a/src/Component/Calculator.css
+++ b/src/Component/Calculator.css
@@ -10,14 +10,27 @@
   color: white;
 }
 
+.header-title {
+  width: 30%;
+  height: 100%;
+}
+
+.header-title h2 {
+  position: absolute;
+  top: 70px;
+  left: 10px;
+  font-size: 40px;
+  text-transform: capitalize;
+  word-wrap: break-word;
+}
+
 .btn-cont {
-  width: 49vw;
-  flex-direction: column;
-  margin: 50px auto;
+  width: 99vw;
+  margin: 75px 0 0 0;
 }
 
 .btn-container {
-  width: 100%;
+  width: 45vw;
 }
 
 .button {
@@ -54,3 +67,69 @@
 .fifth-row button:last-of-type {
   background-color: darkorange;
 }
+
+.main-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  justify-content: space-around;
+  z-index: 5;
+  background-color: black;
+  padding: 15px;
+  box-shadow: 0 4px 8px grey;
+}
+
+.header {
+  font-size: 30px;
+  color: darkorange;
+}
+
+.nav-links {
+  padding: 0;
+  list-style-type: none;
+  column-gap: 50px;
+}
+
+.nav-links li {
+  cursor: pointer;
+  border-right: 1px solid grey;
+}
+
+.nav-link {
+  text-decoration: none;
+  font-size: 20px;
+  padding: 10px;
+  color: white;
+}
+
+.nav-link:hover {
+  color: grey;
+}
+
+.home-page {
+  width: 70vw;
+  margin: 100px auto;
+}
+
+.home-page p {
+  font-size: 25px;
+  margin-top: 20px;
+}
+
+.home-page h2 {
+  font-size: 30px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.quote {
+  margin: 100px auto;
+  width: 70vw; 
+}
+
+.quote p {
+  margin-top: 15px;
+  font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
